# mpris-player-fork

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  metadata.rs  mpris_player.rs
