[package]
name = "mpris-player"
version = "0.6.2"
description = "A library for creating MPRIS2 media players over D-Bus"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
license = "GPL-3.0+"
documentation = "https://docs.rs/mpris-player/"
homepage = "https://gitlab.gnome.org/World/Rust/mpris-player"
repository = "https://gitlab.gnome.org/World/Rust/mpris-player"
keywords = ["deprecated"]

[dependencies]
dbus = "0.9.7"
dbus-tree = "0.9.2"
glib = "0.15.10"
